--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 header {
     font-size: 40px;
     font-style: italic;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: serif;
+    text-align: center;
 }
 body{
     background-color: bisque;
